--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>memes</p>
+<p>shit</p>
+<i>fuccc</i>
 </body>
 </html>
