--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<div class="inner">
 							<header>
 								<h1>Tudy Gallahan</h1>
-								<p>3D Artist and Illustrator. Ringling College of Art and Design Grad '16. Loves Elves.</p>
+								<p>3D Artist and Illustrator. Ringling College of Art and Design Grad '16. Loves Elvess.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
