--- a/index.html
+++ b/index.html
@@ -22,11 +22,6 @@
 					<header id="header">
 						<div class="inner">
 
-							<!-- Logo -->
-								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Home</span>
-								</a>
-
 							<!-- Nav -->
 								<nav>
 									<ul>
@@ -42,9 +37,9 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Resume</a></li>
-							<li><a href="generic.html">About</a></li>
-							<li><a href="generic.html">Blog</a></li>
+							<li><a href="resume.html">Resume</a></li>
+							<li><a href="about.html">About</a></li>
+							<li><a href="http://tg-i.tumblr.com/">Blog</a></li>
 						
 						</ul>
 					</nav>
