--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<div class="inner">
 							<header>
 								<h1>Tudy Gallahan</h1>
-								<p>3D Artist and Illustrator. Ringling College of Art and Design Grad '16. Loves Elvess.</p>
+								<br>3D Artist and Illustrator. Ringling College of Art and Design Grad '16. Loves Elvess.</br>
 							</header>
 							<section class="tiles">
 								<article class="style1">
