--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Tudy Gallahan</h1>
-								<br>3D Artist and Illustrator. Ringling College of Art and Design Grad '16. Loves Elvess.</br>
+                                <h1>Tudy Gallahan</h1>
+								3D Artist and Illustrator. Ringling College of Art and Design Grad '16. Loves Elvess.
 							</header>
 							<section class="tiles">
 								<article class="style1">
