--- a/index.html
+++ b/index.html
@@ -49,94 +49,95 @@
 						<div class="inner">
 							<header>
                                 <h1>Tudy Gallahan</h1>
-								3D Artist and Illustrator. Ringling College of Art and Design Grad '16. Loves Elvess.
+								3D Artist and Illustrator. Ringling College of Art and Design Grad '16. Loves Elves and Fantasy stuff.
 							</header>
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
+										<img src="images/Micheart.jpg" alt="" />
+									</span>
+									<a href="generic.html">
+										<h2>Micheart</h2>
+										<div class="content">
+											<p>Playable Trailer Concept.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/Rose.jpg" alt="" />
+									</span>
+									<a href="generic.html">
+										<h2>Rose Washitsu</h2>
+										<div class="content">
+											<p>Small Tearoom/Family Domicle.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/Winter.jpg" alt="" />
+									</span>
+									<a href="generic.html">
+										<h2>Winterfest Scene</h2>
+										<div class="content">
+											<p>Wildstarcore Contest Entry.</p>
+										</div>
+									</a>
+								</article>
+	                           <article class="style1">
+									<span class="image">
+										<img src="images/Kiddo.jpg" alt="" />
+									</span>
+									<a href="generic.html">
+										<h2>Cael</h2>
+										<div class="content">
+											<p>Character modeled and rigged for Micheart.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style1">
+									<span class="image">
+										<img src="images/Puca.jpg" alt="" />
+									</span>
+									<a href="generic.html">
+										<h2>Puca</h2>
+										<div class="content">
+											<p>Antagonist character modeled and rigged for Micheart.</p>
+										</div>
+									</a>
+								</article>
+                                <article class="style1">
+									<span class="image">
+										<img src="images/Sculpts.jpg" alt="" />
+									</span>
+									<a href="generic.html">
+										<h2>Sculpts</h2>
+										<div class="content">
+											<p>Various Sculpts done in Zbrush.</p>
+										</div>
+									</a>
+								</article>
+                                <article class="style1">
+									<span class="image">
 										<img src="images/Cleric_cropped.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Cleric Designs</h2>
+										<h2>Visual Development</h2>
 										<div class="content">
-											<p>CALLING ALL SPIDER RIDERS</p>
+											<p></p>
 										</div>
 									</a>
 								</article>
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Lorem</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Feugiat</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Tempus</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Aliquam</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Veroeros</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic07.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Ipsum</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
+								
 								<article class="style1">
 									<span class="image">
 										<img src="images/pic08.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Dolor</h2>
+										<h2>Illustrations</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p></p>
 										</div>
 									</a>
 								</article>
@@ -145,42 +146,9 @@
 										<img src="images/pic09.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Nullam</h2>
+										<h2>Misc.</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/pic10.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Ultricies</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/pic11.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Dictum</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/pic12.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Pretium</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p></p>
 										</div>
 									</a>
 								</article>
