Updated Generic Footer, Title Card

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE HTML>
 <!--
+    Tudy Gallahan - 3D Artist, Illustrator
 	Phantom by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>Phantom by HTML5 UP</title>
+		<title>Tudy Gallahan - 3D Artist, Illustrator</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -39,6 +40,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="resume.html">Resume</a></li>
 							<li><a href="about.html">About</a></li>
+                            <li><a href="comm.html">Commissions</a></li>
 							<li><a href="http://tg-i.tumblr.com/">Blog</a></li>
 						
 						</ul>
@@ -163,14 +165,14 @@
 								<h2>Follow</h2>
 								<ul class="icons">
 									<li><a href="https://twitter.com/Tegallaha" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://www.facebook.com/tgiart/" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.instagram.com/dumbelfson/" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="http://tg-i.tumblr.com/" class="icon style2 fa-tumblr"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+									<li><a href="mailto:ewgallahan@gmail.com" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; TGI Studios LLC. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
