Added new pages. Done for the night

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									<span class="image">
 										<img src="images/Micheart.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="micheart.html">
 										<h2>Micheart</h2>
 										<div class="content">
 											<p>Playable Trailer Concept.</p>
