Bunch of Images, Updated all pages except Sculpts and Ill

--- a/cael.html
+++ b/cael.html
@@ -48,15 +48,23 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Micheart</h1>
-							<span class="image main"><img src="images/micheart/1.jpg" alt="" /></span>
-							<p>Yearlong project dedicated to the creation of a playable trailer. All content, including assets, concept art, sculpts, were created by me. Animations from Mixamo.</p>
-                            <span class="image main"><img src="images/micheart/2.jpg" alt="" /></span>
-                            <span class="image main"><img src="images/micheart/3.jpg" alt="" /></span>
-                            <span class="image main"><img src="images/micheart/4.jpg" alt="" /></span>
-                            <span class="image main"><img src="images/micheart/5.jpg" alt="" /></span>
-                            <span class="image main"><img src="images/micheart/6.jpg" alt="" /></span>
-                            <span class="image main"><img src="images/micheart/7.jpg" alt="" /></span>
+							<h1>Cael - Last of the Druids</h1>
+                            <div align=center><div class="sketchfab-embed-wrapper"><iframe width="640" height="480" src="https://sketchfab.com/models/941707f72d8b4c8a98c6c82f379c061a/embed" frameborder="0" allowvr allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+
+<p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
+    <a href="https://sketchfab.com/models/941707f72d8b4c8a98c6c82f379c061a?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Cael - Last of the Druids</a>
+    by <a href="https://sketchfab.com/tgi?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">tgi</a>
+    on <a href="https://sketchfab.com?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
+</p>
+                                </div>
+							
+							<p>Main playable character from the Micheart Project. Fully rigged and compatible with Mixamo animations.</p>
+                            <span class="image main"><img src="images/characters/Cael1.jpg" alt="" /></span>
+                            <span class="image main"><img src="images/characters/Cael2.jpg" alt="" /></span>
+                            <p>Some in-game shots.</p>
+                          <span class="image main"><img src="images/characters/Cael3.jpg" alt="" /></span>
+                            <span class="image main"><img src="images/characters/Cael7.jpg" alt="" /></span>
+                                <span class="image main"><img src="images/characters/Cael8.jpg" alt="" /></span>
                             
 						</div>
 					</div>
