--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 									<span class="image">
 										<img src="images/Rose.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="rose.html">
 										<h2>Rose Washitsu</h2>
 										<div class="content">
 											<p>Small Tearoom/Family Domicle.</p>
@@ -80,7 +80,7 @@
 									<span class="image">
 										<img src="images/Winter.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="winter.html">
 										<h2>Winterfest Scene</h2>
 										<div class="content">
 											<p>Wildstarcore Contest Entry.</p>
@@ -91,7 +91,7 @@
 									<span class="image">
 										<img src="images/Kiddo.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="cael.html">
 										<h2>Cael</h2>
 										<div class="content">
 											<p>Character modeled and rigged for Micheart.</p>
@@ -102,7 +102,7 @@
 									<span class="image">
 										<img src="images/Puca.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="puca.html">
 										<h2>Puca</h2>
 										<div class="content">
 											<p>Antagonist character modeled and rigged for Micheart.</p>
@@ -113,7 +113,7 @@
 									<span class="image">
 										<img src="images/Sculpts.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="sculpts.html">
 										<h2>Sculpts</h2>
 										<div class="content">
 											<p>Various Sculpts done in Zbrush.</p>
@@ -122,37 +122,36 @@
 								</article>
                                 <article class="style1">
 									<span class="image">
-										<img src="images/Cleric_cropped.jpg" alt="" />
+										<img src="images/Sculpts.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Visual Development</h2>
-										<div class="content">
-											<p></p>
-										</div>
-									</a>
-								</article>
-								
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic08.jpg" alt="" />
-									</span>
-									<a href="generic.html">
+									<a href="illustration.html">
 										<h2>Illustrations</h2>
 										<div class="content">
-											<p></p>
+											<p>A collection of my Illustration work.</p>
 										</div>
 									</a>
 								</article>
-								<article class="style1">
+                                <article class="style1">
 									<span class="image">
 										<img src="images/pic09.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Misc.</h2>
+                                    <a href="index.html">
+										<h2>Coming Soon!</h2>
 										<div class="content">
 											<p></p>
 										</div>
-									</a>
+                                    </a>
+								</article>
+                                <article class="style1">
+									<span class="image">
+										<img src="images/pic09.jpg" alt="" />
+									</span>
+                                    <a href="index.html">
+										<h2>Coming Soon!</h2>
+										<div class="content">
+											<p></p>
+										</div>
+                                    </a>
 								</article>
 							</section>
 						</div>
