--- a/rose.html
+++ b/rose.html
@@ -48,16 +48,13 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Micheart</h1>
-							<span class="image main"><img src="images/micheart/1.jpg" alt="" /></span>
-							<p>Yearlong project dedicated to the creation of a playable trailer. All content, including assets, concept art, sculpts, were created by me. Animations from Mixamo.</p>
-                            <span class="image main"><img src="images/micheart/2.jpg" alt="" /></span>
-                            <span class="image main"><img src="images/micheart/3.jpg" alt="" /></span>
-                            <span class="image main"><img src="images/micheart/4.jpg" alt="" /></span>
-                            <span class="image main"><img src="images/micheart/5.jpg" alt="" /></span>
-                            <span class="image main"><img src="images/micheart/6.jpg" alt="" /></span>
-                            <span class="image main"><img src="images/micheart/7.jpg" alt="" /></span>
-                            
+							<h1>Rose Washitsu</h1>
+							<span class="image main"><img src="images/Rose/1.jpg" alt="" /></span>
+							<p>Two week long project dedicated to creating a modular kit. Goal was to have the kit be modular enough to sort into several different spaces.</p>
+                            <span class="image main"><img src="images/Rose/2.jpg" alt="" /></span>
+                            <span class="image main"><img src="images/Rose/3.jpg" alt="" /></span>
+                            <span class="image main"><img src="images/Rose/4.jpg" alt="" /></span>
+                          
 						</div>
 					</div>
 
