--- a/micheart.html
+++ b/micheart.html
@@ -54,6 +54,7 @@
                             <span class="image main"><img src="images/micheart/2.jpg" alt="" /></span>
                             <span class="image main"><img src="images/micheart/3.jpg" alt="" /></span>
                             <span class="image main"><img src="images/micheart/4.jpg" alt="" /></span>
+                            <p>Prop Details.</p>
                             <span class="image main"><img src="images/micheart/5.jpg" alt="" /></span>
                             <span class="image main"><img src="images/micheart/6.jpg" alt="" /></span>
                             <span class="image main"><img src="images/micheart/7.jpg" alt="" /></span>
