--- a/winter.html
+++ b/winter.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Micheart</title>
+		<title>Winterfest Contest Entry</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -48,15 +48,15 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Micheart</h1>
-							<span class="image main"><img src="images/micheart/1.jpg" alt="" /></span>
-							<p>Yearlong project dedicated to the creation of a playable trailer. All content, including assets, concept art, sculpts, were created by me. Animations from Mixamo.</p>
-                            <span class="image main"><img src="images/micheart/2.jpg" alt="" /></span>
-                            <span class="image main"><img src="images/micheart/3.jpg" alt="" /></span>
-                            <span class="image main"><img src="images/micheart/4.jpg" alt="" /></span>
-                            <span class="image main"><img src="images/micheart/5.jpg" alt="" /></span>
-                            <span class="image main"><img src="images/micheart/6.jpg" alt="" /></span>
-                            <span class="image main"><img src="images/micheart/7.jpg" alt="" /></span>
+							<h1>Winterfest Contest Entry</h1>
+							<span class="image main"><img src="images/Cwissmas/1.png" alt="" /></span>
+							<p>Contest Entry for the Wildstarcore Winterfest contest. Short weeklong project around Christmastime 2015.</p>
+                            <span class="image main"><img src="images/Cwissmas/2.png" alt="" /></span>
+                            <span class="image main"><img src="images/Cwissmas/3.png" alt="" /></span>
+                            <span class="image main"><img src="images/Cwissmas/4.jpg" alt="" /></span>
+                            <span class="image main"><img src="images/Cwissmas/5.jpg" alt="" /></span>
+                            <span class="image main"><img src="images/Cwissmas/6.jpg" alt="" /></span>
+                            
                             
 						</div>
 					</div>
