Finished Sculpts page, Updated Front Page

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 								</article>
                                 <article class="style1">
 									<span class="image">
-										<img src="images/Sculpts.jpg" alt="" />
+										<img src="images/illustration.jpg" alt="" />
 									</span>
 									<a href="illustration.html">
 										<h2>Illustrations</h2>
