--- a/sculpts.html
+++ b/sculpts.html
@@ -48,15 +48,12 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Micheart</h1>
-							<span class="image main"><img src="images/micheart/1.jpg" alt="" /></span>
-							<p>Yearlong project dedicated to the creation of a playable trailer. All content, including assets, concept art, sculpts, were created by me. Animations from Mixamo.</p>
-                            <span class="image main"><img src="images/micheart/2.jpg" alt="" /></span>
-                            <span class="image main"><img src="images/micheart/3.jpg" alt="" /></span>
-                            <span class="image main"><img src="images/micheart/4.jpg" alt="" /></span>
-                            <span class="image main"><img src="images/micheart/5.jpg" alt="" /></span>
-                            <span class="image main"><img src="images/micheart/6.jpg" alt="" /></span>
-                            <span class="image main"><img src="images/micheart/7.jpg" alt="" /></span>
+							<h1>Sculpts</h1>
+                            <p>Various sculpts I've done in Zbrush.</p>
+                            <span class="image main"><img src="images/sculpts/felpuppy.jpg" alt="" /></span>
+							<span class="image main"><img src="images/sculpts/Maquette1.jpg" alt="" /></span>
+                            <span class="image main"><img src="images/sculpts/ahma1.jpg" alt="" /></span>
+                            <span class="image main"><img src="images/sculpts/pig1.jpg" alt="" /></span>
                             
 						</div>
 					</div>
