Updated Index, added Illustration Section

--- a/illustration.html
+++ b/illustration.html
@@ -55,67 +55,67 @@
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="images/Micheart.jpg" alt="" />
+										<img src="images/homeland.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Micheart</h2>
+									<a href="homeland.html">
+										<h2>Homeland</h2>
 										<div class="content">
-											<p>Playable Trailer Concept.</p>
+											<p>Cover/Character Design.</p>
 										</div>
 									</a>
 								</article>
 								<article class="style1">
 									<span class="image">
-										<img src="images/Rose.jpg" alt="" />
+										<img src="images/Clover.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Rose Washitsu</h2>
+									<a href="clover.html">
+										<h2>Clover</h2>
 										<div class="content">
-											<p>Small Tearoom/Family Domicle.</p>
+											<p>Personal Illustration</p>
 										</div>
 									</a>
 								</article>
 								<article class="style1">
 									<span class="image">
-										<img src="images/Winter.jpg" alt="" />
+										<img src="images/Tirnanog.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Winterfest Scene</h2>
+										<h2>Tir Na Nog</h2>
 										<div class="content">
-											<p>Wildstarcore Contest Entry.</p>
+											<p>Personal Illustration.</p>
 										</div>
 									</a>
 								</article>
 	                           <article class="style1">
 									<span class="image">
-										<img src="images/Kiddo.jpg" alt="" />
+										<img src="images/NPC.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Cael</h2>
+										<h2>Re:Imagined</h2>
 										<div class="content">
-											<p>Character modeled and rigged for Micheart.</p>
+											<p>NPCs from Morrowind reimagined in my style.</p>
 										</div>
 									</a>
 								</article>
 								<article class="style1">
 									<span class="image">
-										<img src="images/Puca.jpg" alt="" />
+										<img src="images/Spacedog.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Puca</h2>
+										<h2>SPACEDOG!</h2>
 										<div class="content">
-											<p>Antagonist character modeled and rigged for Micheart.</p>
+											<p>Creature Design.</p>
 										</div>
 									</a>
 								</article>
                                 <article class="style1">
 									<span class="image">
-										<img src="images/Sculpts.jpg" alt="" />
+										<img src="images/ShaolinMonk.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Sculpts</h2>
+										<h2>Shaolin Monk</h2>
 										<div class="content">
-											<p>Various Sculpts done in Zbrush.</p>
+											<p>Character Design.</p>
 										</div>
 									</a>
 								</article>
