--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
 								</article>
                                 <article class="style1">
 									<span class="image">
-										<img src="images/pic09.jpg" alt="" />
+										<img src="images/Blog.jpg" alt="" />
 									</span>
-                                    <a href="index.html">
-										<h2>Coming Soon!</h2>
+                                    <a href="http://tg-i.tumblr.com/">
+										<h2>Blog</h2>
 										<div class="content">
 											<p></p>
 										</div>
@@ -144,10 +144,10 @@
 								</article>
                                 <article class="style1">
 									<span class="image">
-										<img src="images/pic09.jpg" alt="" />
+										<img src="images/Sketch.jpg" alt="" />
 									</span>
-                                    <a href="index.html">
-										<h2>Coming Soon!</h2>
+                                    <a href="https://www.instagram.com/dumbelfson/">
+										<h2>Sketchbook</h2>
 										<div class="content">
 											<p></p>
 										</div>
