Updated all illustration pages

--- a/illustration.html
+++ b/illustration.html
@@ -79,7 +79,7 @@
 									<span class="image">
 										<img src="images/Tirnanog.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="tirna.html">
 										<h2>Tir Na Nog</h2>
 										<div class="content">
 											<p>Personal Illustration.</p>
@@ -90,7 +90,7 @@
 									<span class="image">
 										<img src="images/NPC.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="npc.html">
 										<h2>Re:Imagined</h2>
 										<div class="content">
 											<p>NPCs from Morrowind reimagined in my style.</p>
@@ -101,7 +101,7 @@
 									<span class="image">
 										<img src="images/Spacedog.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="spacedog.html">
 										<h2>SPACEDOG!</h2>
 										<div class="content">
 											<p>Creature Design.</p>
@@ -112,7 +112,7 @@
 									<span class="image">
 										<img src="images/ShaolinMonk.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="shaolin.html">
 										<h2>Shaolin Monk</h2>
 										<div class="content">
 											<p>Character Design.</p>
