Fixed Broken Links on Micheart, Clover and Homeland

--- a/homeland.html
+++ b/homeland.html
@@ -48,8 +48,8 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Micheart</h1>
-							<span class="image main"><img src="images/illustration/homelandcover.jpg" alt="" /></span>
+							<h1>Homeland</h1>
+							<span class="image main"><img src="images/illustration/HomelandCover.jpg" alt="" /></span>
 							<p>Cover design for the first in the Legend of Drizzt series, featuring some of my favorite characters from the book.</p>
                             <span class="image main"><img src="images/illustration/HomelandClose1.jpg" alt="" /></span>
                             <span class="image main"><img src="images/illustration/HomelandClose2.jpg" alt="" /></span>
