--- a/rose.html
+++ b/rose.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>ose Washitsu</title>
+		<title>Rose Washitsu</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
