Fixed broken links on pig.

--- a/sculpts.html
+++ b/sculpts.html
@@ -52,8 +52,8 @@
                             <p>Various sculpts I've done in Zbrush.</p>
                             <span class="image main"><img src="images/sculpts/felpuppy.jpg" alt="" /></span>
 							<span class="image main"><img src="images/sculpts/Maquette1.jpg" alt="" /></span>
-                            <span class="image main"><img src="images/sculpts/ahma1.jpg" alt="" /></span>
-                            <span class="image main"><img src="images/sculpts/pig1.jpg" alt="" /></span>
+                            <span class="image main"><img src="images/sculpts/Ahma1.jpg" alt="" /></span>
+                            <span class="image main"><img src="images/sculpts/Pig1.jpg" alt="" /></span>
                             
 						</div>
 					</div>
