Fixed Mobile Thing

--- a/comm.html
+++ b/comm.html
@@ -61,7 +61,7 @@
                             <li>Full Body of any character.</li>
                             <li>Less or more detailed optional.</li>
                             <li>Additional Characters are 18USD each, three characters Max per scene.</li></ul>
-                            <h1>General Commission Guidelines</h1>
+                            <h1>Guidelines</h1>
                             <ul>
                             <li>I will draw any character, animal, anthro, human, alien, etc. No limits!</li>
                             <li>No NSFW with the exception of artful nudity.</li>
