Updated Illustration Page

--- a/illustration.html
+++ b/illustration.html
@@ -53,6 +53,17 @@
                                 <h1>Illustration</h1>
 							</header>
 							<section class="tiles">
+                                <article class="style1">
+									<span class="image">
+										<img src="images/everything3.JPG" alt="" />
+									</span>
+									<a href="EverythingDies.html">
+										<h2>Everything Dies</h2>
+										<div class="content">
+											<p>Comic Zine.</p>
+										</div>
+									</a>
+								</article>
 								<article class="style1">
 									<span class="image">
 										<img src="images/homeland.jpg" alt="" />
@@ -83,6 +94,17 @@
 										<h2>Tir Na Nog</h2>
 										<div class="content">
 											<p>Personal Illustration.</p>
+										</div>
+									</a>
+								</article>
+                                <article class="style1">
+									<span class="image">
+										<img src="images/gravy.JPG" alt="" />
+									</span>
+									<a href="gravytrain.html">
+										<h2>GravyTrain!</h2>
+										<div class="content">
+											<p>Environment and Character concepts for the Airconsole title.</p>
 										</div>
 									</a>
 								</article>
