--- a/gravytrain.html
+++ b/gravytrain.html
@@ -55,6 +55,9 @@
                             <span class="image main"><img src="images/Gravytrain/Turnaround_Broccoli.jpg" alt="" /></span>
                             <span class="image main"><img src="images/Gravytrain/Turnaround_Corn.jpg" alt="" /></span>
                             <span class="image main"><img src="images/Gravytrain/Turnaround_Steak.jpg" alt="" /></span>
+                            <span class="image main"><img src="images/Gravytrain/EnvironmentExploration.jpg" alt="" /></span>
+                            <span class="image main"><img src="images/Gravytrain/EnvironmentThumnails.jpg" alt="" /></span>
+                            <span class="image main"><img src="images/Gravytrain/EnvironmentFinal.jpg" alt="" /></span>
                             
 						</div>
 					</div>
