Updating Broken email on the bottom
Maybe this will commit, maybe this won't. I just don't know anymore.

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 									</li>
 									<li>
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href="mailto:tgicomms@gmail.com">tgicomms@gmailcom</a> (Personal Commissions)
+										<a href="mailto:tgicomms@gmail.com">tgicomms@gmail.com</a> (Personal Commissions)
 									</li>
 								</ul>
 							</div>
