--- a/3Dart.html
+++ b/3Dart.html
@@ -111,7 +111,7 @@
 									</li>
 									<li>
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href="mailto:tgicomms@gmail.com">tgicomms@gmail.com</a> (Personal Commissions)
+										<a href="mailto:tgicomms@gmail.com">tgicomms@gmailcom</a> (Personal Commissions)
 									</li>
 								</ul>
 							</div>
