Reverting a bunch of Broken Stuff Part 1
Reverting back to the cname

--- a/comm.html
+++ b/comm.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Commissions !!! - TGI Studios</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,12 +16,6 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-<<<<<<< HEAD
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Strata</strong>, a super simple<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
-=======
 					<a href="index.html" class="avatar"><img src="images/logowip%20wipwhitetransp.png" alt="" align="" width="150" /></a>
                     <p></p>
 					<h1>Art by Tudy Gallahan</h1>
@@ -31,58 +25,43 @@
                     <p><a href="resume.html" class=button>Resume</a>
                     <p><a href="http://tgistudios.storenvy.com/" class=button>Shop</a>
                     
->>>>>>> parent of c20abd2... idk im just trying to fix this
 				</div>
 			</header>
 
-		<!-- Main -->
+		<!-- Main --> 
 			<div id="main">
 
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>Commissions!</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
-						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
+						<p>Howdy! You're probably here because you're interested in purchasing a personal commission from me. Just as a reminder, personal commissions, as implied, are for <b>personal</b> use only. If you are interested in any long-term business arrangements, including but not limited to: purchasing commercial work, art for a published piece, or anything that would appear on something you'd make a profit off of, please email me at <a href="email:ewgallahan@gmail.com">egallahan@gmail.com</a>. Thank you!</p>
 					</section>
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Work</h2>
+						<h2>Commission Types</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/Comms/sukra2.jpg" class="image fit thumb"><img src="images/Comms/sukra2.jpg" alt="" /></a>
+								<h3><a href="#three">Painted Fullbody</a></h3>
+								<p>Featured: Sukra, a Dystopia Rising LARP Character.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/Comms/sarolarge.jpg" class="image fit thumb"><img src="images/Comms/sarolarge.jpg" alt="" /></a>
+                                <h3><a href="#four">Chibi</a></h3>
+                                <p>Featured: FFXIV Character owned by <a href=https://twitter.com/Quantumfetus>@QuantumFetus</a>.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/Comms/nerevar.jpg" class="image fit thumb"><img src="images/Comms/nerevar.jpg" alt="" /></a>
+                                <h3><a href="#five">Headshots</a></h3>
+								<p>Featured: <a href=https://twitter.com/kekarlsenart>@kekarlsenart</a>'s Nerevar.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/Comms/SiccSample.jpg" class="image fit thumb"><img src="images/Comms/SiccSample.jpg" alt="" /></a>
+                                <h3><a href="#six">"Sick" Headshots (Limited)</a></h3>
+								<p>Featured: Owl, my own Dystopia Rising Character.</p>
 							</article>
 						</div>
 						<ul class="actions">
@@ -92,40 +71,72 @@
 
 				<!-- Three -->
 					<section id="three">
-						<h2>Get In Touch</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
-						<div class="row">
-							<div class="col-8 col-12-small">
-								<form method="post" action="#">
-									<div class="row gtr-uniform gtr-50">
-										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-										<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
-									</div>
-								</form>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</div>
-							<div class="col-4 col-12-small">
-								<ul class="labeled-icons">
-									<li>
-										<h3 class="icon fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
-										United States
-									</li>
-									<li>
-										<h3 class="icon fa-mobile"><span class="label">Phone</span></h3>
-										000-000-0000
-									</li>
-									<li>
-										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
-									</li>
-								</ul>
-							</div>
-						</div>
+						<header class="major">
+							<h2>Fullbody</h2>
+						</header>
+                        <div class="row">
+                        <article class="col-6 col-6-xsmall work-item">
+                        <a class="image fit"><img src="images/Comms/cam2.jpg"></a>
+                        </article>
+                        <article class="col-6 col-7-xsmall work-item">
+                        <a class="image fit"><img src="images/Comms/saphiraFinal.jpg"></a>
+                        </article>
+                        </div>
+						<p>Ever wanted a fully painted, RPG-style painting of your character? Well look no further! These fullbodies come with a full resolution image of the final piece plus any crops that you could possibly need for your various mediums (social media, character sheets, etc). </p>
+                        <h3>Prices range from <b>$65 - $85.</b> For a quote, please email <a href="tgicomms@gmail.com">tgicomms@gmail.com</a>!</h3>
+
+					</section>
+                
+                				<!-- Four -->
+					<section id="four">
+						<header class="major">
+							<h2>Chibis</h2>
+						</header>
+                        <div class="row">
+                        <article class="col-6 col-12-xsmall work-item">
+                        <a class="image fit"><img src="images/Comms/chibis/feyamLL.jpg"></a>
+                        </article>
+                        <article class="col-6 col-12-xsmall work-item">
+                        <a class="image fit"><img src="images/Comms/chibis/suzpuppylarge.jpg"></a>
+                        </article>
+                        </div>
+						<p>A small, cute, chunky rendition of your character! Perfect for icons, or blog buddies, or just a lighthearted friend to brighten your (or someone else's) day!</p>
+                        <h3>$35.00 USD each, Discounts for groups of 3+ Apply</h3>
+
+					</section>
+                                				<!-- Five -->
+					<section id="five">
+						<header class="major">
+							<h2>Headshots</h2>
+						</header>
+                        <div class="row">
+                        <article class="col-6 col-12-xsmall work-item">
+                        <a class="image fit"><img src="images/Comms/houston.jpg"></a>
+                        </article>
+                        <article class="col-6 col-12-xsmall work-item">
+                        <a class="image fit"><img src="images/Comms/Aku_Lana.jpg"></a>
+                        </article>
+                        </div>
+						<p>A regular ole' headshot. Good for an icon or to decorate your wall with. Can come with a simple background or a solid color.</p>
+                        <h3>$25.00 USD each</h3>
+
+					</section>
+                <!-- Six -->
+					<section id="six">
+						<header class="major">
+							<h2>"Sick" Headshots</h2>
+						</header>
+                        <div class="row">
+                        <article class="col-6 col-12-xsmall work-item">
+                        <a class="image fit"><img src="images/Comms/SiccSample3.jpg"></a>
+                        </article>
+                        <article class="col-6 col-12-xsmall work-item">
+                        <a class="image fit"><img src="images/Comms/SiccSample2.jpg"></a>
+                        </article>
+                        </div>
+						<p>A headshot with a sickening twist! Features your character, but looking like they've got some sickness or derrangement. Woo!!! Comes with a cool background and an emblem of your character's choice. (Faith, group, representative, etc)</p>
+                        <h3>$30.00 USD each, Discounts for multiple sets of characters</h3>
+
 					</section>
 
 				<!-- Four -->
@@ -449,19 +460,19 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</div>
 
 		<!-- Footer -->
-			<footer id="footer">
+                <footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="https://twitter.com/Tegallaha" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="http://tgistudios.storenvy.com/" class="icon fa-shopping-cart"><span class="label">Storenvy</span></a></li>
+						<li><a href="http://tg-i.tumblr.com/" class="icon fa-tumblr-square"><span class="label">Tumblr</span></a></li>
+						<li><a href="mailto:ewgallahan@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; TGI Studios LLC 2018</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
-			</footer>
+			 </footer>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
