Updated Button Again
Trying to get button to work, need it to be live to actually test it

--- a/comm.html
+++ b/comm.html
@@ -210,7 +210,7 @@
 									</div>
 								</form>
 								<ul class="actions">
-									<li><input type="submit" value="SEND!" /></li>
+                                    <li><button type="submit" value="SEND!" >SEND!</button></li>
 								</ul>
 							</div>
 						</div>
