--- a/comm.html
+++ b/comm.html
@@ -36,8 +36,8 @@
 						<header class="major">
 							<h2>Commissions!</h2>
 						</header>
-                        <div align=center><h1>COMMISSIONS ARE CURRENTLY <font style color=#7CFC00>OPEN!</font></h1></div>
-                        <div align=center>(As of 2/4/2019)</div>
+                        <div align=center><h1>COMMISSIONS ARE CURRENTLY <font style color=#FF0000>CLOSED!</font></h1></div>
+                        <div align=center>(As of 2/15/2019)</div>
                         <div align=center>Please email <a href="email:tgicomms@gmail.com">tgicomms@gmail.com</a> or fill out the form at the bottom of the page if you're interested! Slots fill up quickly, so act fast! You can view my current queue of commissions on my <a href="https://trello.com/b/vQr90y3A/tgicommissions">Trello.</a></div>
 						<p>Howdy! You're probably here because you're interested in purchasing a personal commission from me. Just as a reminder, personal commissions, as implied, are for <b>personal</b> use only. If you are interested in any long-term business arrangements, including but not limited to: purchasing commercial work, art for a published piece, or anything that would appear on something you'd make a profit off of, please email me at <a href="email:ewgallahan@gmail.com">ewgallahan@gmail.com</a>. Thank you!</p>
 					</section>
