--- a/comm.html
+++ b/comm.html
@@ -37,7 +37,7 @@
 							<h2>Commissions!</h2>
 						</header>
                         <div align=center><h1>COMMISSIONS ARE CURRENTLY <font style color=#7CFC00>OPEN!</font></h1></div>
-                        <div align=center>(As of 3/12/2019)</div>
+                        <div align=center>(As of 4/3/2019)</div>
                         <div align=center>Please email <a href="email:tgicomms@gmail.com">tgicomms@gmail.com</a> or fill out the form at the bottom of the page if you're interested! Slots fill up quickly, so act fast! You can view my current queue of commissions on my <a href="https://trello.com/b/vQr90y3A/tgicommissions">Trello.</a></div>
 						<p>Howdy! You're probably here because you're interested in purchasing a personal commission from me. Just as a reminder, personal commissions, as implied, are for <b>personal</b> use only. If you are interested in any long-term business arrangements, including but not limited to: purchasing commercial work, art for a published piece, or anything that would appear on something you'd make a profit off of, please email me at <a href="email:ewgallahan@gmail.com">ewgallahan@gmail.com</a>. Thank you!</p>
 					</section>
@@ -199,6 +199,7 @@
 					<section id="nine">
                         <h2>Commission Form</h2>
                         <p>Use the form below to inquire about a commission! If you aren't avaliable to be contacted via email, please include the best way to contact you. (Twitter, Facebook, Discord, etc.) If this form isn't working for you, feel free to just send me an email at <a href="mailto:tgicomms@gmail.com">tgicomms@gmail.com</a>.</p>
+                        <p>(By ordering a commission, you automatically agree to my <a href="commterms.html">Commissions Terms of Service</a>)</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
                                 <form action="https://formspree.io/tgicomms@gmail.com" method="POST" >
